--- a/.github/mergify.yml
+++ b/.github/mergify.yml
@@ -3,8 +3,8 @@ queue_rules:
     conditions:
       # Must write expected checks explicitly
       # Reference: https://docs.mergify.com/conditions/#validating-all-status-checks
-      - check-success=e2e_kind_test
-      - check-success=helm_pkg_check
+      # - check-success=e2e_kind_test
+      # - check-success=helm_pkg_check
 
 pull_request_rules:
   - name: put pr to queue
@@ -61,8 +61,8 @@ pull_request_rules:
 
   - name: PR label to need-review
     conditions:
-      - check-success=e2e_kind_test
-      - check-success=helm_pkg_check
+      # - check-success=e2e_kind_test
+      # - check-success=helm_pkg_check
       - label!=reviewed
     actions:
       label:
