feat: init matrixone controller
Signed-off-by: wanglei4687 <wanglei4687@gmail.com>

--- a/charts/matrixone-operator/templates/crds/core.matrixorigin.io_dnsets.yaml
+++ b/charts/matrixone-operator/templates/crds/core.matrixorigin.io_dnsets.yaml
@@ -6571,8 +6571,7 @@ spec:
                 type: string
               topologySpread:
                 description: TopologyEvenSpread specifies what topology domains the
-                  Pods in set should be evenly spread in. This will overridden by
-                  .overlay.TopologySpreadConstraints
+                  Pods in set should be evenly spread in. This will override by .overlay.TopologySpreadConstraints
                 items:
                   type: string
                 type: array
@@ -6625,7 +6624,7 @@ spec:
                       be updated. Default value is 0.'
                     x-kubernetes-int-or-string: true
                   paused:
-                    default: "false"
+                    default: false
                     description: Paused indicates that the CloneSet is paused. Default
                       value is false
                     type: boolean
