--- a/deploy/crds/core.matrixorigin.io_logsets.yaml
+++ b/deploy/crds/core.matrixorigin.io_logsets.yaml
@@ -15,7 +15,17 @@ spec:
     singular: logset
   scope: Namespaced
   versions:
-  - name: v1alpha1
+  - additionalPrinterColumns:
+    - jsonPath: .spec.image
+      name: Image
+      type: string
+    - jsonPath: .spec.replicas
+      name: Replicas
+      type: integer
+    - jsonPath: .metadata.creationTimestamp
+      name: Age
+      type: date
+    name: v1alpha1
     schema:
       openAPIV3Schema:
         description: A LogSet is a resource that represents a set of MO's LogService
@@ -68,15 +78,6 @@ spec:
                 description: Overlay allows advanced customization of the pod spec
                   in the set
                 properties:
-                  ImagePullPolicy:
-                    default: IfNotPresent
-                    description: ImagePullPolicy is the pull policy of MatrixOne image.
-                      The default value is the same as the default of Kubernetes.
-                    enum:
-                    - Always
-                    - Never
-                    - IfNotPresent
-                    type: string
                   affinity:
                     description: Affinity is a group of affinity scheduling rules.
                     properties:
@@ -6499,7 +6500,8 @@ spec:
                 type: object
               topologySpread:
                 description: TopologyEvenSpread specifies what topology domains the
-                  Pods in set should be evenly spread in. This will override by .overlay.TopologySpreadConstraints
+                  Pods in set should be evenly spread in. This will be overridden
+                  by .overlay.TopologySpreadConstraints
                 items:
                   type: string
                 type: array
