--- a/examples/matrixone.yml
+++ b/examples/matrixone.yml
@@ -5,7 +5,30 @@ metadata:
 spec:
   version:
   cn:
+    image: matrixorigin/mo-service:0.1.2
+    replicas: 1
+    volume:
+      size: 10Gi
   dn:
+    image: matrixorigin/mo-service:0.1.2
+    replicas: 1
+    volume:
+      size: 10Gi
   logService:
-  webUIEnabled:
-  imageRepository:
+    image: matrixorigin/mo-service:0.1.2
+    replicas: 3
+    sharedStorage:
+      s3:
+        path: test/bucket
+    volume:
+      size: 10Gi
+    overlay:
+      nodeSelector:
+        arch: amd64
+        topology.kubernetes.io/zone: us-west-2c
+    initialConfig:
+      logShards: 1
+      dnShards: 1
+      haKeeperReplicas: 3
+      logShardReplicas: 3
+  webUIEnabled: false
