--- a/deploy/crds/core.matrixorigin.io_matrixoneclusters.yaml
+++ b/deploy/crds/core.matrixorigin.io_matrixoneclusters.yaml
@@ -9,8 +9,8 @@ metadata:
 spec:
   group: core.matrixorigin.io
   names:
-    kind: MatrixoneCluster
-    listKind: MatrixoneClusterList
+    kind: MatrixOneCluster
+    listKind: MatrixOneClusterList
     plural: matrixoneclusters
     shortNames:
     - mo
@@ -20,7 +20,7 @@ spec:
   - name: v1alpha1
     schema:
       openAPIV3Schema:
-        description: A MatrixoneCluster is a resource that represents a MatrixOne
+        description: A MatrixOneCluster is a resource that represents a MatrixOne
           Cluster
         properties:
           apiVersion:
@@ -36,13 +36,12 @@ spec:
           metadata:
             type: object
           spec:
-            description: MatrixoneClusterSpec defines the desired state of MatrixoneCluster
+            description: MatrixOneClusterSpec defines the desired state of MatrixOneCluster
               Note that MatrixOneCluster does not support specify overlay for underlying
               sets directly due to the size limitation of kubernetes apiserver
             properties:
-              ap:
-                description: AP is an optional CN pod set that accept MPP sub-plans
-                  to accelerate sql queries
+              cn:
+                description: CN is the default CN pod set of this Cluster
                 properties:
                   cacheVolume:
                     description: CacheVolume is the desired local cache volume for
@@ -66,6 +65,24 @@ spec:
                   config:
                     description: Config is the raw config for pods
                     type: string
+                  configmap:
+                    description: ConfigMap is reference to a key in a config map
+                    properties:
+                      key:
+                        description: The key to select.
+                        type: string
+                      name:
+                        description: 'Name of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names
+                          TODO: Add other useful fields. apiVersion, kind, uid?'
+                        type: string
+                      optional:
+                        description: Specify whether the ConfigMap or its key must
+                          be defined
+                        type: boolean
+                    required:
+                    - key
+                    type: object
+                    x-kubernetes-map-type: atomic
                   image:
                     description: Image is the docker image of the main container
                     type: string
@@ -100,10 +117,16 @@ spec:
                           to an implementation-defined value. More info: https://kubernetes.io/docs/concepts/configuration/manage-resources-containers/'
                         type: object
                     type: object
+                  serviceType:
+                    default: ClusterIP
+                    description: ServiceType is the service type of cn service
+                    enum:
+                    - ClusterIP
+                    - NodePort
+                    - LoadBalancer
+                    type: string
                   topologySpread:
-                    description: TopologyEvenSpread specifies what topology domains
-                      the Pods in set should be evenly spread in. This will be overridden
-                      by .overlay.TopologySpreadConstraints
+                    description: This will overridden by .overlay.TopologySpreadConstraints
                     items:
                       type: string
                     type: array
@@ -135,9 +158,21 @@ spec:
                   config:
                     description: Config is the raw config for pods
                     type: string
+                  format:
+                    default: json
+                    description: 'Format log format method: json, console'
+                    type: string
                   image:
                     description: Image is the docker image of the main container
                     type: string
+                  level:
+                    default: info
+                    description: 'Level log level: debug,info,warning'
+                    type: string
+                  maxSize:
+                    default: 512
+                    description: MaxSize log file max size
+                    type: integer
                   replicas:
                     description: Replicas is the desired number of pods of this set
                     format: int32
@@ -169,10 +204,16 @@ spec:
                           to an implementation-defined value. More info: https://kubernetes.io/docs/concepts/configuration/manage-resources-containers/'
                         type: object
                     type: object
+                  serviceType:
+                    default: ClusterIP
+                    description: ServiceType is the service type of dn service
+                    enum:
+                    - ClusterIP
+                    - NodePort
+                    - LoadBalancer
+                    type: string
                   topologySpread:
-                    description: TopologyEvenSpread specifies what topology domains
-                      the Pods in set should be evenly spread in. This will be overridden
-                      by .overlay.TopologySpreadConstraints
+                    description: This will overridden by .overlay.TopologySpreadConstraints
                     items:
                       type: string
                     type: array
@@ -286,9 +327,7 @@ spec:
                         type: object
                     type: object
                   topologySpread:
-                    description: TopologyEvenSpread specifies what topology domains
-                      the Pods in set should be evenly spread in. This will be overridden
-                      by .overlay.TopologySpreadConstraints
+                    description: This will overridden by .overlay.TopologySpreadConstraints
                     items:
                       type: string
                     type: array
@@ -317,76 +356,6 @@ spec:
                 - sharedStorage
                 - volume
                 type: object
-              tp:
-                description: TP is the default CN pod set that accepts client connections
-                  and execute queries
-                properties:
-                  cacheVolume:
-                    description: CacheVolume is the desired local cache volume for
-                      CNSet, node storage will be used if not specified
-                    properties:
-                      size:
-                        anyOf:
-                        - type: integer
-                        - type: string
-                        description: Size is the desired storage size of the volume
-                        pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
-                        x-kubernetes-int-or-string: true
-                      storageClassName:
-                        description: StorageClassName reference to the storageclass
-                          of the desired volume, the default storageclass of the cluster
-                          would be used if no specified.
-                        type: string
-                    required:
-                    - size
-                    type: object
-                  config:
-                    description: Config is the raw config for pods
-                    type: string
-                  image:
-                    description: Image is the docker image of the main container
-                    type: string
-                  replicas:
-                    description: Replicas is the desired number of pods of this set
-                    format: int32
-                    type: integer
-                  resources:
-                    description: Resources is the resource requirement of the main
-                      conainer
-                    properties:
-                      limits:
-                        additionalProperties:
-                          anyOf:
-                          - type: integer
-                          - type: string
-                          pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
-                          x-kubernetes-int-or-string: true
-                        description: 'Limits describes the maximum amount of compute
-                          resources allowed. More info: https://kubernetes.io/docs/concepts/configuration/manage-resources-containers/'
-                        type: object
-                      requests:
-                        additionalProperties:
-                          anyOf:
-                          - type: integer
-                          - type: string
-                          pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
-                          x-kubernetes-int-or-string: true
-                        description: 'Requests describes the minimum amount of compute
-                          resources required. If Requests is omitted for a container,
-                          it defaults to Limits if that is explicitly specified, otherwise
-                          to an implementation-defined value. More info: https://kubernetes.io/docs/concepts/configuration/manage-resources-containers/'
-                        type: object
-                    type: object
-                  topologySpread:
-                    description: TopologyEvenSpread specifies what topology domains
-                      the Pods in set should be evenly spread in. This will be overridden
-                      by .overlay.TopologySpreadConstraints
-                    items:
-                      type: string
-                    type: array
-                required:
-                - replicas
-                type: object
               version:
                 description: Version is the version of the cluster, which translated
                   to the docker image tag used for each component. default to the
@@ -397,12 +366,12 @@ spec:
                   default to true.
                 type: boolean
             required:
+            - cn
             - dn
             - logService
-            - tp
             type: object
           status:
-            description: MatrixoneClusterStatus defines the observed state of MatrixoneCluster
+            description: MatrixOneClusterStatus defines the observed state of MatrixOneCluster
             properties:
               cn:
                 description: CN is the CN set status
