--- a/deploy/crds/core.matrixorigin.io_dnsets.yaml
+++ b/deploy/crds/core.matrixorigin.io_dnsets.yaml
@@ -147,6 +147,10 @@ spec:
                   as soon as it is ready)
                 format: int32
                 type: integer
+              nodeSelector:
+                additionalProperties:
+                  type: string
+                type: object
               overlay:
                 description: Overlay allows advanced customization of the pod spec
                   in the set
