--- a/charts/matrixone-operator/values.yaml
+++ b/charts/matrixone-operator/values.yaml
@@ -12,6 +12,9 @@ image:
   pullPolicy: IfNotPresent
   tag: "sha-c939c87"
 
+logset:
+  failover: "false"
+
 imagePullSecrets: []
 nameOverride: ""
 fullnameOverride: ""
